[package]
edition = "2021"
name = "rlibc-ext"
version = "0.3.1"
rust-version = "1.91"
authors = ["warlock <internalmike@gmail.com>"]
description = "A bare-metal library supplying certain libc functions."
readme = "README.md"
documentation = "https://docs.rs/rlibc-ext/"
keywords = ["strlen", "windows", "no_std", "dos", "memcpy"]
categories = ["os", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/rlibc-ext"

[lints.rust]
unexpected_cfgs = { level = "allow" }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rlibc = "1.0.0"

[badges]
maintenance = { status = "experimental" }
